--- a/style.css
+++ b/style.css
@@ -6,15 +6,18 @@ body{
 }
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .container{
     background: #FFFFFF;
     width: 870px;
     padding: 30px;
 }
-h4{
+hr{
     border: 1px solid #D1D1D1;
+    margin-bottom: 30px;
+     
 }
 .top-players{
     margin-bottom: 30px;
@@ -46,3 +49,94 @@ h4{
     margin-left: 16px;
     font-size: 18px;
 }
+
+      /* top-blogs design starts here */
+
+    
+.blogs{
+      display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 26px;
+
+
+}
+
+  
+    
+
+    .blog{
+        display: flex;
+
+    }
+    .blog-info{
+        margin-left: 16px;
+    }
+     
+      .blog .thumbnail img{
+          width: 177px;
+          height: 117px;
+      }
+      .blog-title{
+          font-size: 20px;
+      }
+      .blog-author{
+          color: #9F9F9F;
+          font-size: 16px;
+      }
+      .blog-author a{
+          text-decoration: none;
+          font-size: 16px;
+          color: #562EFF;
+
+      }
+
+          /* latest course starts here */
+
+          .courses{
+              display: grid;
+              grid-template-columns: repeat(3,1fr);
+              grid-gap: 24px;
+              box-shadow: gainsboro;
+
+          }
+          
+          
+
+          .courses-detail{
+
+          }
+          .courses-info{
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              
+             
+
+          }
+          .course .courses-banner img{
+            width: 224px;
+            height: 104px;
+          }
+          .fa-faster{
+              font-size: 8px;
+              
+          }
+.fa-star.filed{
+
+
+    width: 12px;
+    height: 11px;
+    color:#FFC014;  
+}
+.fa-star.empty{
+    color: #AEAEAE;
+}
+/* .course-duration{
+    background: #FFE4E8;
+    color:#FF4A60;
+    border-radius: 15px;
+    width: 94px;
+    height: 30px;
+    font-size: 14px;
+    text-align: center;
+}      */
